--- a/_layouts/post-index.html
+++ b/_layouts/post-index.html
@@ -29,13 +29,13 @@
 <script type="text/javascript">
   var picData = [{
     src : '/images/fuzhou-min.jpg',
-    desc : '2012.10.4 福州·平潭 第一次看见大海'
+    desc : '第一次看见大海'
   },{
     src : '/images/shiyanshi.jpg',
-    desc : '2013.10.26 从实验室的角度看整个校园'
+    desc : '校园'
   },{
     src : '/images/huoyin.jpg',
-    desc : '谢谢你 陪伴了我10年的火影！'
+    desc : '2个月，等我！'
   }],
   picIndex = ((new Date).getMonth() +1) % picData.length,
   curDate = picData[picIndex],
